--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-center border border-0"><i class="fa-solid fa-3x fa-envelope"></i></li>
                             <li class="list-group-item d-flex justify-content-center border border-0">Email</li>
-                            <li class="list-group-item text-email d-flex justify-content-center border border-0">cesarvalladaresmilla@gmail.com</li>
+                            <li class="list-group-item text-email d-flex justify-content-center border border-0"><span class="span-email">cesarvalladaresmilla@gmail.com</span></li>
                         </ul>
                     </div>
                 </div>
